# tcgp-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  Dockerfile  docker-compose.yml  find_missing_translations.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-deploy.yml
apps/tracker/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
apps/tracker/migrations/: 0001_initial.py  0002_rarity_image_name_rarity_repeat_count.py  0003_userprofile_friendrequest.py  0004_userprofile_friend_code.py  0005_alter_card_options_alter_friendrequest_options_and_more.py  0006_packnametranslation_pokemonsetnametranslation.py  0007_slots_refactor.py  0008_normalize_probability_field_names.py  0009_pokemonset_available_until.py  0010_generation_packtype_and_more.py  0011_alter_generation_display_name.py
apps/tracker/models/: __init__.py  cards.py  users.py
apps/tracker/templatetags/: friend_extras.py
apps/tracker/tests/: test_utils.py
data/: card_translations.csv  cards.csv  generations.csv  pack_translations.csv  pack_types.csv  rarities.csv  rarity_probabilities.csv  set_translations.csv  sets.csv
tcgptracker/: asgi.py  settings.py  urls.py  wsgi.py
tcgptracker/settings/: base.py  development.py  production.py
tracker/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
tracker/migrations/: 0001_initial.py  0002_rarity_image_name_rarity_repeat_count.py  0003_userprofile_friendrequest.py  0004_userprofile_friend_code.py
tracker/templatetags/: friend_extras.py
tracker/tests/: test_utils.py
(+39 files in other folders)
